<?xml version="1.0"?>
<package>
  <name>soma</name>
  <version>2.0.1</version>
  <description>The soma package</description>
  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>
  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/soma</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  
  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <run_depend>soma_geospatial_store</run_depend>  
  <run_depend>soma_pcl_segmentation</run_depend>
  <run_depend>occupancy_maps</run_depend>  
  <run_depend>soma_io</run_depend>                
  <run_depend>soma_roi_manager</run_depend>
  <run_depend>soma_manager</run_depend>
  <run_depend>soma_trajectory</run_depend>
  <run_depend>soma_map_manager</run_depend>
  <run_depend>soma_utils</run_depend>
  <run_depend>soma2_msgs</run_depend>      
  <run_depend>soma_objects</run_depend>
  <run_depend>world_state_importer</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
