<?xml version="1.0"?>
<package>
  <name>soma_geospatial_store</name>
  <version>0.0.2</version>
  <description>The soma_geospatial_store package</description>

  <maintainer email="L.Kunze@cs.bham.ac.uk">Lars Kunze</maintainer>
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>


</package>