<?xml version="1.0"?>
<package>
  <name>soma_manager</name>
  <version>1.0.4</version>
  <description>The soma_manager package</description>

  <maintainer email="hkarao@kth.se">Hakan Karaoguz</maintainer>
  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mongodb_store</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>soma2_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>soma_map_manager</build_depend>
  
  <run_depend>interactive_markers</run_depend>
  <run_depend>mongodb_store</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>soma2_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>soma_geospatial_store</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>qtbase5-dev</run_depend>
  <run_depend>soma_map_manager</run_depend>

</package>
